# q-hack-2026

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  NOTICE.md  README.md  biome.json  customer_vectors.csv  customer_vectors_named.csv  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.sqlx/: query-0889b30eba4c1b943992b7d1e81cce6b7b9a0b3834bba9fbab73add2a2547271.json  query-609c583427575b8a239f833f2b66d15c6dc23b24d21345647ea7abb7a07a413b.json  query-8a0283f97e5bc00ec262fcaef04c1ed8e26aa722a7ef6c1dc28f5df7a2ed30e6.json  query-cc1708d90195cd64197a469318036f83f414afe1b76c6c924454abe1ea34d8aa.json  query-d9db2b6c9db243005b52295e4037ce305bb1f0c0bd8afb9704ac33bee8dceede.json
crates/picky-axum/: Cargo.toml
crates/picky-axum/src/: error.rs  lib.rs
crates/picky-utils/: Cargo.toml
crates/picky-utils/src/: config.rs  env.rs
data/: hubs.csv  user_meal_interactions.csv  warehouse.csv  warehouses.csv
docs/: architecture.typ
migrations/: 20260408160307_create_profiles.sql
scripts/: export_customer_vectors_csv.py  fetch_dish_images.py  generate_customer_vectors.py  generate_interactions.py  generate_synthetic_users.py  init_database.sh
services/dagster/: Dockerfile  workspace.yaml
services/dagster/dagster_home/: dagster.yaml
services/picky/: .env.example  Cargo.toml
services/picky-api/: .env.example  Cargo.toml
services/picky-api/migrations/: 20260408170000_create_synthetic_training_tables.sql  20260409120000_create_recipes_and_ingredients.sql
services/picky-api/src/: agent.rs  config.rs  food2vec.rs  main.rs  model.rs  model_watcher.rs  oapi.rs  profile_features.rs  state.rs
services/picky-api/src/api/: chat.rs  mod.rs  predict.rs  recipes.rs  recommend.rs  vectorize.rs
services/picky-api/src/api/profile/: create.rs  login.rs  mod.rs  model.rs  read.rs  update.rs
services/picky-api/src/prompts/: intro.txt
services/picky-api/src/tools/: error.rs  mod.rs  predict.rs
services/picky-app/: next.config.mjs  orval.config.ts  package.json  tsconfig.json  tsconfig.sw.json
services/picky-app/app/: layout.tsx  manifest.ts  page.tsx  sw.ts
services/picky-app/app/(app)/: cart-context.tsx  layout.tsx
services/picky-app/app/(app)/browse/: page.tsx
services/picky-app/app/(app)/cart/: page.tsx
services/picky-app/app/(app)/profile/: page.tsx  transparency-pane.tsx
services/picky-app/app/browse/: page.tsx
services/picky-app/components/: cart-context.tsx  theme-provider.tsx  user-context.tsx
services/picky-app/lib/: api.ts  env.ts  fetch-client.ts  user-context.tsx
services/picky-app/lib/api/: pickyAIAgent.schemas.ts  pickyAPI.schemas.ts
services/picky-app/lib/api/profiles/: profiles.ts
services/picky-app/lib/api/recipes/: recipes.ts
services/picky-app/lib/api/recommendations/: recommendations.ts
services/picky-app/public/: sw.js
services/picky-recs/: .env.example  Dockerfile  definitions.py  pyproject.toml
services/picky-recs/data/: recipes.csv
services/picky-recs/picky_recs/: __init__.py  definitions.py  jobs.py  resources.py  schedules.py  synthetic_data.py
services/picky-recs/picky_recs/assets/: __init__.py  recipes.py  seed_synthetic_users.py  synthetic.py  training.py
services/picky-recs/picky_recs/data/: ingredients.csv  recipes.csv
services/picky/src/: agent.rs  config.rs  food2vec.rs  main.rs  oapi.rs  state.rs
services/picky/src/api/: chat.rs  mod.rs
services/picky/src/tools/: mod.rs
