[workspace]
resolver = "3"
members = ["crates/*", "services/picky-api"]

[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://picnic.com"
documentation = "https://picky.picnic.com"
authors = ["Kasper Jønsson <kas@lerpz.com>"]

[workspace.dependencies]
# Internal
picky-axum = { path = "crates/picky-axum" }
picky-utils = { path = "crates/picky-utils" }
# S3 / Object Storage
aws-config = "1.6"
aws-sdk-s3 = "1.82"
# Database
mongodb = "2.8"
qdrant-client = "1.17"
sqlx = "0.8"
# Axum, Tokio and Tower
async-stream = "0.3"
axum = "0.8"
axum-extra = "0.10"
http = "1.3"
tokio = "1.47"
tokio-util = "0.7"
tokio-stream = "0.1"
tower = "0.5"
tower-http = "0.6"
utoipa = "5.4"
utoipa-axum = "0.2"
utoipa-scalar = "0.3"
# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"
# Serde
serde = "1.0"
serde_json = "1.0"
# AI
ort = "2.0.0-rc.9"
ndarray = "0.17"
rig-core = "0.34"
rig-qdrant = "0.2"
rmcp = "0.6"
# Dev
typst = "0.14.2"
# Utilities
arc-swap = "1.7"
bytes = "1.10"
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
chrono = "0.4"
dotenvy = "0.15"
rand = "0.9"
regex = "1.11"
reqwest = "0.12"
prost = "0.14"
schemars = "1.0"
secrecy = "0.10"
strum = "0.27"
thiserror = "2.0"
uuid = "1.18"

[workspace.lints.rust]
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
