[package]
name = "picky-axum"
edition = "2024"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
regex = { workspace = true, optional = true }
serde = { workspace = true }
utoipa = { workspace = true, features = ["macros"], optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"] }

[features]
oapi  = ["dep:utoipa", "dep:serde_json"]

[lints]
workspace = true
